# Random-Notes

./: .gitignore  README.md  alembic.ini  database.db  pyproject.toml
.cursor/: mcp.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 85c4949cffc5_init_tables.py  a954f7388af8_init_tables.py
app/: .gitignore  main.py
app/api/: deps.py
app/api/routes/: auth.py  (+7 more)
app/core/: client_ip.py  config.py  exception_handlers.py  global_rate_limit.py  http_security.py  rate_limit.py  response.py  security.py
app/db/: database.py
app/models/: __init__.py  block_media_relation.py  media_asset.py  note.py  note_block.py  note_comment.py  note_share.py  sms_verification_code.py  user.py  user_follow.py  user_session.py
app/schemas/: auth.py  block_media_relation.py  media_asset.py  note.py  note_block.py  note_block_order.py  note_comment.py  note_content.py  note_cover.py  note_detail.py  note_share.py  response.py
app/services/: auth_services.py  block_media_relation_services.py  follow_services.py  media_asset_services.py  note_block_services.py  note_comment_services.py  note_content_services.py  note_services.py  note_share_services.py
deploy/: DEPLOY.md  deploy.sh  docker-compose.yml  env.example  host-nginx-snippet.conf  import-poetize.sh
docker/: Dockerfile.api  Dockerfile.web  nginx-limits.conf  nginx.subpath.template.conf
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
scripts/: deploy-remote.env.example  deploy-remote.ps1  import_poetize.py  migrate_media_to_qiniu.py
(+23 files in other folders)
